アップロードのテスト

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,7 @@
 
 /* 包括部分 */
 html {
-    scroll-behavior: smooth;
+    // scroll-behavior: smooth;
 }
 body {
     font-family: "メイリオ", "Meiryo","Yu Gothic Medium","游ゴシック Medium","Yugothic","游ゴシック体","ヒラギノ角ゴ Pro W3", sans-serif;
