--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 @charset "UTF-8";
 /* 包括部分 */
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  font-family: "メイリオ", "Meiryo","Yu Gothic Medium","游ゴシック Medium","Yugothic","游ゴシック体","ヒラギノ角ゴ Pro W3", sans-serif;
+  font-family: "kaiti SC", "Meiryo","Yu Gothic Medium","游ゴシック Medium","Yugothic","游ゴシック体","ヒラギノ角ゴ Pro W3", sans-serif;
   margin: 0px;
 }
 
