--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,10 +2,10 @@
 
 /* 包括部分 */
 html {
-    // scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 body {
-    font-family: "メイリオ", "Meiryo","Yu Gothic Medium","游ゴシック Medium","Yugothic","游ゴシック体","ヒラギノ角ゴ Pro W3", sans-serif;
+    font-family: "kaiti SC", "Meiryo","Yu Gothic Medium","游ゴシック Medium","Yugothic","游ゴシック体","ヒラギノ角ゴ Pro W3", sans-serif;
     margin: 0px;
     @include sp{
         box-sizing: border-box;
