--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,7 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    font-family: "kaiti SC", "Meiryo","Yu Gothic Medium","游ゴシック Medium","Yugothic","游ゴシック体","ヒラギノ角ゴ Pro W3", sans-serif;
+    font-family: "メイリオ", "Meiryo","Yu Gothic Medium","游ゴシック Medium","Yugothic","游ゴシック体","ヒラギノ角ゴ Pro W3", sans-serif;
     margin: 0px;
     @include sp{
         box-sizing: border-box;
